# webadmin/app/api/controllers/visit.js
@@ -9,7 +9,43 @@ const fs = require('fs');
 module.exports = {
     getVisit : getVisit,
     addVisit : addVisit,
+    getLatest: getLatest,
 };
+
+function getLatest(req, res) {
+    let query = {}
+    let options = {
+        sort: {
+            date_created: -1
+        },
+        skip: 0,
+        limit: 1
+    };
+    visit.find(query, [], options).exec((err, visit_list) => {
+
+        let result = visit_list.map(x => {
+            const PermittedVisitor = {
+                id : x._id,
+                visitorInfo : {
+                    visitorName: x.visitorName,
+                    visitorTitle: x.visitorTitle,
+                    visitorCompany: x.visitorCompany,
+                    visitorContact: x.visitorContact,
+                    visitorEmail: x.visitorEmail,
+                    visitorEmpNum: x.visitorEmpNum,
+                    visitorStart: x.visitorStart,
+                    visitorEnd: x.visitorEnd,
+                    visitorPurpose: x.visitorPurpose,
+                    visitorPermitIdImage: String(x.visitorPermitIdImage)
+                }
+            };
+
+            return PermittedVisitor;
+        });
+        console.log('Got ' + JSON.stringify(result).length + ' bytes.');
+        res.json(result[0]);
+    });
+}
 
 function getVisit(req, res) {
     let query = {}
